[gd_scene load_steps=2 format=3 uid="uid://b36ii6ibsau8d"]

[ext_resource type="Script" uid="uid://cip5vykmxnw01" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_06t4h")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 1216.0
offset_bottom = 640.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainerTop" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainerBottom" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainerBottom"]
layout_mode = 2

[node name="OptionLeftButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerBottom/HBoxContainer"]
layout_mode = 2
text = "<<"

[node name="MainButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerBottom/HBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="OptionRightButton" type="Button" parent="MarginContainer/VBoxContainer/CenterContainerBottom/HBoxContainer"]
layout_mode = 2
text = ">>"

[node name="HighScores" type="Node" parent="."]

[node name="OptionsMenu" type="Node" parent="."]

[node name="MenuTransitionEffect" type="ColorRect" parent="."]
visible = false
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerBottom/HBoxContainer/OptionLeftButton" to="." method="_on_option_left_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerBottom/HBoxContainer/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CenterContainerBottom/HBoxContainer/OptionRightButton" to="." method="_on_option_right_button_pressed"]
